--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="changeme"
+application.secret="K0Rfco1JJXu7e7;6wySyg_tfRF@rcTL^v4[n?XjWXuDKvPUJGX^[GJxiuTELTbbM"
 
 # The application languages
 # ~~~~~
