--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-  "name": "BareQuotes",
+  "name": "play-silhouette-angular-seed",
   "description": "Seed project to show how Silhouette can be used to create a SPA with AngularJS/Satellizer and Play scaffolded by yeoman.",
   "keywords": [
     "Play",
     "Silhouette",
     "Angular"
   ],
-  "website": "https://github.com/mohiva/BareQuotes",
-  "repository": "https://github.com/mohiva/BareQuotes",
+  "website": "https://github.com/mohiva/play-silhouette-angular-seed",
+  "repository": "https://github.com/mohiva/play-silhouette-angular-seed",
   "success_url": "/",
   "env": {
     "BUILDPACK_URL": "https://github.com/heroku/heroku-buildpack-multi",
