--- a/conf/application.prod.conf
+++ b/conf/application.prod.conf
@@ -5,15 +5,15 @@ application.secret=${?PLAY_APP_SECRET}
 silhouette {
 
   # OAuth1 token secret provider settings
-  oauth1TokenSecretProvider.cookieDomain="BareQuotes.herokuapp.com"
+  oauth1TokenSecretProvider.cookieDomain="play-silhouette-angular-seed.herokuapp.com"
   oauth1TokenSecretProvider.secureCookie=true
 
   # Facebook provider
-  facebook.redirectURL="https://BareQuotes.herokuapp.com/"
+  facebook.redirectURL="https://play-silhouette-angular-seed.herokuapp.com/"
 
   # Google provider
-  google.redirectURL="https://BareQuotes.herokuapp.com"
+  google.redirectURL="https://play-silhouette-angular-seed.herokuapp.com"
 
   # Twitter provider
-  twitter.callbackURL="https://BareQuotes.herokuapp.com/authenticate/twitter"
+  twitter.callbackURL="https://play-silhouette-angular-seed.herokuapp.com/authenticate/twitter"
 }
