--- a/project/build.properties
+++ b/project/build.properties
@@ -1,1 +1,4 @@
+#Activator-generated Properties
+#Wed Jul 22 23:31:43 IST 2015
+template.uuid=98913d3f-4215-42ac-ab25-ed5a75fd06cc
 sbt.version=0.13.5
